--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "theme-starter",
-  "title": "Starter Theme",
-  "displayName": "Starter Theme",
-  "theme": "ui",
+  "name": "aura-theme",
+  "title": "Aura Theme",
+  "displayName": "Aura Theme",
+  "theme": "aura",
   "version": "0.1.0",
-  "description": "A great dark theme to start your own themes.",
+  "description": "A great dark theme based on Aura.",
   "license": "MIT",
   "engines": {
     "mailspring": "*"
   }
 }
-
